WL#9638: Step 58 ---------------- Fix for BUG#90709, race condition at node failure take over handling